<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Illusion Settings</string>
    <string name="general_settings">General UI</string>
    <string name="title_generalui">General UI</string>
    <string name="ok">OK</string>
    
    <string name="global_change_warning" product="default">This setting affects all users on this phone.</string>   
    <!-- Share to clipboard -->
    <string name="clipboard_notification">Copied to clipboard</string>
    <string name="title_clipboard_share">Copy to clipboard</string>

    <!-- Power Menu Options-->
    <string name="bars_and_menus_category_power_menu_title">Power menu</string>
    <string name="power_menu_toggle_screenshot_title">Show Screenshot</string>
    <string name="power_menu_toggle_screenshot_summary">Tick or untick to show/hide screenshot option in Power Menu</string>
    <string name="power_menu_toggle_screenrecord_title">Screen Record</string>
    <string name="power_menu_onthego_title">On-The-Go Mode</string>
    <string name="power_menu_toggle_screenrecord_summary">Show screen Record option in Power Menu</string>

    <!-- Status Bar -->
    <string name="bars_settings">Bars Settings</string>
    <string name="bars_and_menus_settings">Bars and menus</string>
    <string name="bars_and_menus_category_status_bar_title">Status Bar</string>
    <string name="status_bar_toggle_brightness">Brightness Control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across status bar</string>
    <string name="status_bar_toggle_info">Automatic brightness is enabled</string>

    <!-- Network speed -->
    <string name="show_network_speed">Network speed indicator</string>
    <string name="show_network_speed_summary">Show network speed in statusbar</string>
    <string name="show_network_speed_bits">Show speed as bits per second</string>
    <string name="show_network_speed_bytes">Show speed as Bytes per second</string>

    <!-- Hardware keys -->
    <string name="button_volume_keys_title">Volume</string>
    <string name="button_settings">Button Settings</string>
    <string name="button_keys_title">Keys</string>
    <string name="keys_bindings_title">Key actions</string>
    <string name="button_keys_back_title" >Back key</string>
    <string name="button_keys_home_title" >Home key</string>
    <string name="button_keys_menu_title" >Menu key</string>
    <string name="button_keys_assist_title" >Search key</string>
    <string name="button_keys_appSwitch_title" >App switch key</string>
    <string name="keys_enable_custom_title">Custom actions</string>
    <string name="keys_back_press_title">Back key</string>
    <string name="keys_back_long_press_title">Back key (long press)</string>
    <string name="keys_home_press_title">Home key</string>
    <string name="keys_home_long_press_title">Home key (long press)</string>
    <string name="keys_home_double_tap_title">Home key (double tap)</string>
    <string name="keys_menu_press_title">Menu key</string>
    <string name="keys_menu_long_press_title">Menu key (long press)</string>
    <string name="keys_assist_press_title">Search key</string>
    <string name="keys_assist_long_press_title">Search key (long press)</string>
    <string name="keys_app_switch_press_title">App switch key</string>
    <string name="keys_app_switch_long_press_title">App switch key (long press)</string>
    <string name="keys_action_nothing">No action</string>
    <string name="keys_action_menu">Open/close menu</string>
    <string name="keys_action_app_switch">Recent apps switcher</string>
    <string name="keys_action_search">Search assistant</string>
    <string name="keys_action_voice_search">Voice search</string>
    <string name="keys_action_in_app_search">In-app search</string>
    <string name="keys_action_home">Home button</string>
    <string name="keys_action_back">Back button</string>
    <string name="keys_action_last_app">Switch to last app</string>
    <string name="keys_action_kill_app">Kill app</string>
    <string name="keys_action_sleep">Go to sleep</string>
    <string name="keys_action_normal">Normal press</string>
    <string name="keys_action_long">Long press</string>
    <string name="keys_action_double">Double tap</string>
    <string name="dialog_no_home_key_title">No home action</string>
    <string name="no_home_key">You have no button assigned to the \"Home\" action! This can make your device unusable!</string>
    <string name="button_headsethook_title">Headset</string>
    <string name="button_headsethook_launch_voice_title">Headset launches voice</string>
    <string name="button_headsethook_launch_voice_summary">Pressing the headset button will launch voice controls</string>


    <!-- QuickSettings: Quick Pulldown -->
    <string name="title_quick_pulldown">Quick pulldown</string>
    <string name="summary_quick_pulldown">Quickly pulldown quicksettings with one finger</string>
    <string name="quick_pulldown_off">Off</string>
    <string name="quick_pulldown_centre">Centre</string>
    <string name="quick_pulldown_left">Left</string>
    <string name="quick_pulldown_right">Right</string>

    <string name="notification_drawer_category_title">Notification drawer</string>
    <string name="custom_statusbar_header_title">Contextual notification panel header</string>
    <string name="custom_statusbar_header_summary">Sets the background of the notification panel header to an image based on the current date and time</string>

    <!-- QuickSettings: Smart Pulldown -->
    <string name="smart_pulldown_title">Smart pulldown</string>
    <string name="smart_pulldown_summary">Open Quick Settings when there are no notifications present</string>
    <string name="smart_pulldown_off">Off</string>
    <string name="smart_pulldown_dismissable">Pulldown if there are no cleareable notifications</string>
    <string name="smart_pulldown_persistent">Pulldown if there are no notifications</string>

    <!-- QuickSettings: Dynamic Row -->
    <string name="qs_configurable_title">QuickSettings configurable</string>
    <string name="qs_configurable_summary">Enable/disable dynamic row changes</string>

    <!-- Cursor control -->
    <string name="volume_key_cursor_control_title">Cursor control</string>
    <string name="volume_key_cursor_control_on">Left/right</string>
    <string name="volume_key_cursor_control_on_reverse">Right/left</string>
    <string name="disabled">Disabled</string>

    <!--Double tap to sleep-->
    <string name="double_tap_to_sleep_title">Double tap to sleep</string>
    <string name="double_tap_to_sleep_summary">Allow double tap in statusbar to turn off screen</string>

</resources>
