<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2013 The OmniROM Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="interface_bars"
        android:title="@string/bars_and_menus_category_status_bar_title"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <!-- Status bar -->

    <PreferenceCategory
            android:key="category_status_bar"
            android:title="@string/bars_and_menus_category_status_bar_title">

        <CheckBoxPreference
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:persistent="false"/>

        <ListPreference
                android:key="quick_pulldown"
                android:title="@string/title_quick_pulldown"
                android:summary="@string/summary_quick_pulldown"
                android:entries="@array/quick_pulldown_entries"
                android:entryValues="@array/quick_pulldown_values"
                android:persistent="false" />

	 <CheckBoxPreference
            android:key="status_bar_traffic"
            android:title="@string/show_network_speed"
            android:summary="@string/show_network_speed_summary"
            android:defaultValue="false" />

        <ListPreference
                android:key="smart_pulldown"
                android:title="@string/smart_pulldown_title"
                android:summary="@string/smart_pulldown_summary"
                android:entries="@array/smart_pulldown_entries"
                android:entryValues="@array/smart_pulldown_values"
                android:persistent="false" />

        <CheckBoxPreference
                android:key="quicksettings_dynamic_row"
                android:title="@string/qs_configurable_title"
                android:summary="@string/qs_configurable_summary"
                android:persistent="false"/>

    </PreferenceCategory>

    <!-- Notification drawer -->	

    <PreferenceCategory
            android:key="category_notification_drawer"
            android:title="@string/notification_drawer_category_title">

    <CheckBoxPreference
            android:key="custom_status_bar_header"
            android:title="@string/custom_statusbar_header_title"
            android:summary="@string/custom_statusbar_header_summary"	
            android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>